src/lib/snapshots/cviz__snapshot_tests__tests__typed_chain_ascii_default_no_types.snap
---
source: src/lib/snapshot_tests.rs
expression: "ascii_snap(&typed_chain_graph(), &GraphRenderOpts::default(), false)"
---
╞══ handler ════════════════════════════════════════

                ┌────────────┐             ┌─────┐
 ext:handler ──▶│ middleware │───handler──▶│ srv │
                └────────────┘             └─────┘
