src/lib/snapshots/cviz__snapshot_tests__tests__typed_chain_ascii_full_with_types.snap
---
source: src/lib/snapshot_tests.rs
assertion_line: 217
expression: "ascii_snap(&typed_chain_graph(), DetailLevel::Full, true)"
---
┌───────────────────────────┐
│       All Instances       │
├───────────────────────────┤
│  [srv] [comp:0]           │
│  [middleware] [comp:1]    │
└───────────────────────────┘
┌─────────────────────────────────────────────────────────┐
│                       Connections                       │
├─────────────────────────────────────────────────────────┤
│  [srv] ── wasi:http/handler@0.3.0✦ ──> [middleware]     │
│  [middleware] ──> (Export: wasi:http/handler@0.3.0✦)    │
│                                                         │
│  ✦ `handle`: (u32) -> bool                              │
└─────────────────────────────────────────────────────────┘
