src/lib/snapshots/cviz__snapshot_tests__tests__typed_chain_ascii_handler_chain_no_types.snap
---
source: src/lib/snapshot_tests.rs
assertion_line: 192
expression: "ascii_snap(&typed_chain_graph(), DetailLevel::HandlerChain, false)"
---
┌────────────────────────────────────┐
│           Service Chains           │
├────────────────────────────────────┤
│[Export: handler] ──> middleware    │
│middleware ── handler ──> srv       │
└────────────────────────────────────┘
