src/lib/snapshots/cviz__snapshot_tests__tests__typed_chain_mermaid_all_interfaces_with_types.snap
---
source: src/lib/snapshot_tests.rs
assertion_line: 317
expression: "mermaid_snap(&typed_chain_graph(), DetailLevel::AllInterfaces, true)"
---
%%{init: {'flowchart': {'wrappingWidth': 2400}}}%%
graph LR
    subgraph host["Host Imports"]
        wasi_http_handler_0_3_0["handler"]
    end

    subgraph composition["Component Instances"]
        srv["srv"]
        middleware["middleware"]
    end

    wasi_http_handler_0_3_0 -.->|"handler✦"| srv
    srv -->|"handler✦"| middleware

    middleware --> export_wasi_http_handler_0_3_0(["Export: handler✦"])

    key["<div style='text-align:left'>Signatures:<br/>✦ 'handle': (u32) -&gt; bool</div>"]
    style key fill:none,stroke:none,color:#888
