src/lib/snapshots/cviz__snapshot_tests__tests__typed_chain_mermaid_default_with_types.snap
---
source: src/lib/snapshot_tests.rs
expression: "mermaid_snap(&typed_chain_graph(), &GraphRenderOpts::default(), true)"
---
%%{init: {'flowchart': {'wrappingWidth': 2400}}}%%
graph LR
    classDef shared stroke-width:3px,stroke-dasharray:5 3

    subgraph sg_wasi_http_handler_0_3_0["export: handler"]
        n1["srv"]
        n2["middleware"]
        ext_wasi_http_handler_0_3_0(["ext: handler✦"]) --> n2
        n2 -->|"handler✦"| n1
    end


    key["<div style='text-align:left'>Signatures:<br/>✦ 'handle': (u32) -&gt; bool</div>"]
    style key fill:none,stroke:none,color:#888
