src/lib/snapshots/cviz__snapshot_tests__tests__typed_chain_mermaid_full_with_types.snap
---
source: src/lib/snapshot_tests.rs
assertion_line: 331
expression: "mermaid_snap(&typed_chain_graph(), DetailLevel::Full, true)"
---
%%{init: {'flowchart': {'wrappingWidth': 2400}}}%%
graph LR
    subgraph all["All Instances"]
        srv["srv [comp:0]"]
        middleware["middleware [comp:1]"]
    end

    srv -->|"wasi:http/handler@0.3.0✦"| middleware

    middleware --> export_wasi_http_handler_0_3_0(["Export: wasi:http/handler@0.3.0✦"])

    key["<div style='text-align:left'>Signatures:<br/>✦ 'handle': (u32) -&gt; bool</div>"]
    style key fill:none,stroke:none,color:#888
